--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6200284b",
    "metadata": {},
    "outputs": [],
@@ -16,28 +16,16 @@
    "execution_count": null,
    "id": "1c3c81d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X.shape: (4, 3, 8, 8)\n",
-      "X.strides: (768, 256, 32, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q1. Image batch\n",
     "X = np.random.rand(4, 3, 8, 8).astype(np.float32)\n",
-    "# (B=4, C=3, H=8, W=8)\n",
-    "print(\"X.shape:\", X.shape)\n",
-    "print(\"X.strides:\", X.strides)\n",
-    "# Question: What does each stride value represent in BYTES?\n",
-    "# Calculate manually and verify!\n",
-    "# 768: Bytes to jump to the next batch\n",
-    "# 256: Bytes to jump to the next channel\n",
-    "# 32: Bytes to jump to the next row (height)\n",
-    "# 4: Bytes to jump to the next column (width)"
+    "B, C, H, W = X.shape\n",
+    "s0, s1, s2, s3 = X.strides\n",
+    "print(s0)\n",
+    "print(s1)\n",
+    "print(s2)\n",
+    "print(s3)"
    ]
   },
   {
@@ -45,32 +33,104 @@
    "execution_count": null,
    "id": "d41f09d5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 3, 3, 2, 2, 1)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q2. Extract 2x2 patches, with a stride of 1\n",
-    "X = np.random.rand(1, 1, 4, 4).astype(np.float32)\n",
-    "# (B=1, C=1, H=4, W=4)\n",
-    "\n",
-    "# Goal: Extract ALL 2×2 patches with stride=1\n",
-    "# Expected output shape: (1, 3, 3, 2, 2, 1)\n",
-    "#                         B  H_out W_out kH kW C\n"
+    "X = np.random.randint(0, 255, (8, 1, 32, 32))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ebc5e493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3. We skip pixels here\n",
+    "image = np.random.randint(0, 256, (8, 1, 32, 32))\n",
+    "kernel_size, padding, stride = 2, 1, 2\n",
+    "# Pad the image\n",
+    "padded_image = np.pad(\n",
+    "    image,\n",
+    "    ((0, 0), (0, 0), (padding, padding), (padding, padding))\n",
+    ")\n",
+    "# Get the output shapes\n",
+    "B, C, H, W = X.shape\n",
+    "h_out = (H + 2*padding - kernel_size) // stride + 1\n",
+    "w_out = (W + 2*padding - kernel_size) // stride + 1\n",
+    "# Get the strides\n",
+    "s0, s1, s2, s3 = padded_image.strides\n",
+    "patches = np.lib.stride_tricks.as_strided(\n",
+    "    padded_image,\n",
+    "    strides = (s0, s2*stride, s3*stride, s2, s3, s1),\n",
+    "    shape = (B, h_out, w_out, kernel_size, kernel_size, C)\n",
+    ")\n",
+    "assert patches.shape == (8, 17, 17, 2, 2, 1)\n",
+    "print(patches.shape)\n",
+    "patches = np.reshape(patches, (B, h_out*w_out, kernel_size*kernel_size*C))\n",
+    "print(patches.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e179c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Q4. Multi-channel RGB\n",
+    "image = np.random.randint(0, 256, (2, 3, 32, 32))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33a539ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patches[0, 0, 0, :, :, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6052eecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [[0, 0, 1], [1, 0, 0], [0, 1, 0]]\n",
+    "labels = np.array(labels)\n",
+    "probs = np.array([[0.1, 0.1, 0.8], [0.1, 0.5, 0.4], [0.6, 0.2, 0.2]])\n",
+    "losses = labels * np.log(probs)\n",
+    "losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "133c61ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "losses = np.sum(losses, axis=1)\n",
+    "losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83be664a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-np.mean(losses).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce43aa4b",
    "metadata": {},
    "outputs": [],
    "source": []
