Complete training loop

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6200284b",
    "metadata": {},
    "outputs": [],
@@ -30,13 +30,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d41f09d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 31, 31, 2, 2, 1)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Q2. Extract 2x2 patches, with a stride of 1\n",
-    "X = np.random.randint(0, 255, (8, 1, 32, 32))"
+    "X = np.random.randint(0, 255, (8, 1, 32, 32))\n",
+    "# Parameters definition\n",
+    "kernel_size, padding, stride = 2, 0, 1\n",
+    "B, C, H, W = X.shape # Original image shape\n",
+    "h_out = (H + 2*padding - kernel_size)//stride + 1\n",
+    "w_out = (W + 2*padding - kernel_size)//stride + 1\n",
+    "if padding:\n",
+    "    padded_image = np.pad(\n",
+    "        X,\n",
+    "        ((0, 0), (0, 0), (padding, padding), (padding, padding))\n",
+    "    )\n",
+    "else:\n",
+    "    padded_image = X\n",
+    "s0, s1, s2, s3 = padded_image.strides\n",
+    "patches = np.lib.stride_tricks.as_strided(\n",
+    "    padded_image,\n",
+    "    strides=(s0, s2*stride, s3*stride, s2, s3, s1),\n",
+    "    shape=(B, h_out, w_out, kernel_size, kernel_size, C)\n",
+    ")\n",
+    "patches.shape"
    ]
   },
   {
